--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');
 
 * {
   padding: 0%;
   margin: 0%;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+  font-family: "Inter", sans-serif;
 }
 
 
@@ -18,6 +18,11 @@ body{
 
 }
 
+.row {
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
 
 
@@ -30,6 +35,20 @@ body{
     align-items: center;
     margin: 0 auto;
     padding: 0 24px;
+}
+
+.nav__logo {
+    display: flex;
+    align-items: center;
+justify-content: center;
+}
+
+.logo__img {
+    width: 40px;
+    margin-right: 12px;
+}
+
+.nav__logo--wrapper {
 }
 
 
@@ -51,13 +70,13 @@ a:hover {
     cursor: pointer;
 }
 
-#navbar ul{
+.navbar ul{
     padding: 15px;
     list-style: none;
 
 }
 
-#navbar li{
+.navbar li{
     display: inline;
 
 }
