--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,8 @@ body{
 
 
 
+/* NAV BAR  */
+
 .navbar {
     width: 100%;
     max-width: 1200px;
@@ -47,12 +49,6 @@ justify-content: center;
     width: 40px;
     margin-right: 12px;
 }
-
-.nav__logo--wrapper {
-}
-
-
-
 
 li {
     list-style-type: none;
@@ -87,4 +83,23 @@ a:hover {
     justify-content: flex-end;
     margin: 15px;
     padding: 15px;
+}
+
+.nav__link {
+    margin: 0 24px;
+    font-size: 14px;
+    font-weight: 600;
+    color: #242424;
+    padding-bottom: 4px;
+    border-bottom: 2px solid transparent;
+    transition: all 300ms ease;
+
+}
+
+.nav__link--primary {
+    background-color: rgb(100 21 255);
+    color: white !important;
+    padding: 12px 32px;
+    border-radius: 50px;
+    margin-left: 0;
 }
