--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700;900&display=swap');
 
 * {
   padding: 0%;
@@ -43,6 +43,15 @@ body{
     display: flex;
     align-items: center;
 justify-content: center;
+font-size: 24px;
+font-weight: 900;
+transition: color 300ms ease;
+}
+
+.nav__logo:hover {
+    text-decoration: none;
+    color: rgb(100 21 255);
+
 }
 
 .logo__img {
@@ -59,6 +68,7 @@ a {
     padding: 5px;
     text-decoration: none;
     color: black;
+    
 }
 
 a:hover {
@@ -91,8 +101,16 @@ a:hover {
     font-weight: 600;
     color: #242424;
     padding-bottom: 4px;
-    border-bottom: 2px solid transparent;
     transition: all 300ms ease;
+    text-underline-offset: 8px;
+    
+
+}
+
+.nav__link:hover {
+    color: rgb(100 21 255);
+    border-bottom: 2px solid;
+
 
 }
 
