--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@ body{
     width: 100%;
     max-width: 1200px;
     margin: 0 auto;
+    padding: 24px;
 }
 
 
@@ -101,6 +102,7 @@ a:hover {
     font-weight: 600;
     color: #242424;
     padding-bottom: 4px;
+    border-bottom: 2px solid transparent;
     transition: all 300ms ease;
     text-underline-offset: 8px;
     
@@ -109,8 +111,7 @@ a:hover {
 
 .nav__link:hover {
     color: rgb(100 21 255);
-    border-bottom: 2px solid;
-
+    border-color: rgb(100, 21, 255);
 
 }
 
@@ -120,4 +121,94 @@ a:hover {
     padding: 12px 32px;
     border-radius: 50px;
     margin-left: 0;
+    text-decoration: none;
 }
+
+header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 64px;
+    width: 100%;
+}
+
+.purple {
+    color: rgb(100 21 255);
+}
+
+.header__left {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: left;
+}
+
+.header__right {
+    width: 60%;
+}
+
+.header__img {
+    width: 100%;
+}
+
+.header__title {
+    font-size: 48px;
+}
+
+
+
+.header__para {
+    margin: 32px 0;
+    font-size: 18px;
+    color: #243E63;
+    word-spacing: 0.05em;
+}
+
+.header__input--container {
+    position: relative;
+    max-width: 28rem;
+}
+
+.header__input--button {
+    position: absolute;
+    right: 0px;
+    top: 0px;
+    bottom: 0px;
+    background-color: rgb(100 21 255);
+    color: white;
+    border-radius: 9999px;
+    border: none;
+    font-size: 16px;
+    font-weight: 600;
+    width: 156px;
+    margin: 8px 4px 8px 0;
+    line-height: 1;
+}
+
+.header__input {
+    padding: 20px 192px 20px 32px;
+    border-radius: 9999px;
+    font-weight: 500;
+    font-size: 100%;
+    border: 2px solid gray;
+}
+
+.customers__container {
+    margin-top: 80px;
+}
+
+.customers__title {
+    color: #A0AEC0;
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 0.05em;
+}
+
+.customers__img {
+    width: 100%;
+    padding-right: 64px;
+    margin-top: 16px;
+    opacity: 0.5;
+}
+
