--- a/styles.css
+++ b/styles.css
@@ -71,11 +71,17 @@ footer {
     line-height: 1;
 }
 
-.menu--open {
+
+.menu--open { 
+    max-height: 100vh;
+    overflow-y: hidden;
+  }
+  
+  .menu--open .menu__backdrop {
     visibility: visible;
     opacity: 1;
-
-}
+  
+  }
 
 .backdrop__link {
     text-decoration: none;
@@ -864,5 +870,248 @@ margin-bottom: 16px;
         margin-top: 32px;
         margin-bottom: 32px;
     }
+
+}
+
+@media (max-width: 768px) {
+    .backdrop__link {
+        margin: 4px 0;
+    }
+
+    .header__input {
+        padding: 20px 192px 20px 32px;
+    }
+
+    .header__right {
+        width: 70%;
+    }
+
+    .section__subtitle {
+        font-size: 48px;
+        text-align: center;
+    }
+
+    .services {
+        max-width: 400px;
+    }
+
+    .service {
+        width: 100%;
+    }
+
+    .row__quality {
+        flex-direction: column-reverse;
+        text-align: center;
+    }
+
+    .quality__img--container {
+        width: 60%;
+        margin: 0 auto;
+        margin-bottom: 32px;
+    }
+    .quality__description {
+        width: 60%;
+        margin: 0 auto;
+    }
+
+    #quality .section__subtitle {
+        font-size: 36px;
+    }
+
+    #quality .section__para {
+        text-align: center;
+        font-size: 14px;
+    }
+    .row__steps {
+        flex-direction: column;
+    }
+
+    .steps__img--container {
+        width: 65%;
+        margin-bottom: 64px;
+    }
+
+    .steps__description {
+        text-align: center;
+        margin-left: 0;
+        width: 100%;
+    }
+
+    #steps .section__subtitle {
+        font-size: 36px;
+    }
+
+    .step {
+        flex-direction: column;
+    }
+
+    .step__description {
+        margin-left: 0;
+    }
+
+    .step__title {
+        margin: 12px 0;
+    }
+
+    .step__para {
+        max-width: 300px;
+        margin: 0 auto;
+    }
+
+    #pricing .section__subtitle {
+        text-align: center;
+    }
+
+    .footer__links {
+        margin: 0 auto;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .footer__list {
+        width: calc(100% / 3);
+        margin-bottom: 32px;
+        text-align: center;
+        display: flex;
+        align-items: center;
+    }
+
+    .footer__link {
+        text-align: center;
+    }
+
+    .footer__copyright {
+        flex-direction: column;
+    }
+
+    .footer__copyright--para {
+        margin: 24px 0;
+    }
+
+    @media (max-width: 658px) {
+
+        .backdrop__link {
+            margin: 4px 0;
+        }
+    
+        .header__input--container {
+            max-width: none;
+        }
+    
+        .header__input--button {
+            position: unset;
+            padding: 20px 192px;
+            position: static;
+            margin: 0;
+            text-align: center;
+        }
+    
+        .header__input {
+            margin-bottom: 12px;
+        }
+    
+        .header__input,
+        .header__input--button {
+            width: 90%;
+        }
+    
+        .section__subtitle {
+            font-size: 36px;
+        }
+    
+        .service {
+            flex-direction: column;
+            align-items: center;
+        }
+    
+        .service__img {
+            margin-bottom: 12px;
+        }
+    
+        .service__description {
+            text-align: center;
+            margin: 0;
+        }
+    
+        .quality__description {
+            width: 100%;
+        }
+    
+        .quality__img--container {
+            width: 100%;
+        }
+    
+        #quality .section__subtitle {
+            font-size: 30px;
+        }
+    
+        .steps__img--container {
+            width: 100%;
+        }
+    
+        #pricing .section__subtitle {
+            font-size: 36px;
+        }
+    }
+
+    @media (max-width: 592px) {
+
+        .backdrop__link {
+            margin: 4px 0;
+        }
+        
+        .header__input--container {
+            max-width: none;
+        }
+    
+        .header__input,
+        .header__input--button {
+            width: 100%;
+            padding: 12px 32px;    
+        }
+
+        @media (max-width: 356px) {
+
+            .backdrop__link {
+                margin: 4px 0;
+            }
+            
+                .header__input--container {
+                    max-width: none;
+                }
+                
+                .header__input,
+                .header__input--button {
+                    width: 100%;
+                    padding: 8px 24px;    
+                }
+            
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 }
