--- a/styles.css
+++ b/styles.css
@@ -1077,6 +1077,10 @@ margin-bottom: 16px;
             .backdrop__link {
                 margin: 4px 0;
             }
+
+            .menu__backdrop {
+                padding: 16px;
+            }
             
                 .header__input--container {
                     max-width: none;
